# flask-gen

./: .gitignore  pyproject.toml
src/flask_gen/: __init__.py  cli.py  config.py  file.py  generator.py  logger.py
src/flask_gen/structs/: base.py
