[project]
name = "flask-gen"
version = "0.0.1"
authors = [
  { name="Lev Kany", email="levkany.dev@gmail.com" },
]
description = "generates producation ready flask project ready to use"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/levkany/flaskgen"
Issues = "https://github.com/levkany/flaskgen/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
flask-gen = "flask_gen:main"
